--- a/views/sequelize.html
+++ b/views/sequelize.html
@@ -1,34 +1,4 @@
-Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@SangjunYou 
-ZeroCho
-/
-nodejs-book
-Public
-21
-471
-444
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-nodejs-book/ch7/7.6/learn-sequelize/views/sequelize.html
-@ZeroCho
-ZeroCho Update: 7/8 examples
-Latest commit e46f26d on 18 Dec 2019
- History
- 1 contributor
-71 lines (71 sloc)  1.89 KB
-   
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -97,19 +67,6 @@ Latest commit e46f26d on 18 Dec 2019
       <tbody></tbody>
     </table>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/sequelize.js"></script>
+    <script src="/public/sequelize.js"></script>
   </body>
 </html>
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Loading complete
